--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   name             : "Yilin Zhang"
   avatar           : "images/android-chrome-512x512.png"
   bio              : "Computer Vision Master student"
-  location         : "LV Group of Laboratory for Multimedia Computing, HeFei University of Technology"
+  location         : "HeFei University of Technology"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"
