--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Yilin Zhang"
-  avatar           : "images/android-chrome-512x512.png"
-  bio              : "Computer Vision Master student"
+  avatar           : "images/android-chrome-512x512.webp"
+  bio              : "CS Master student"
   location         : "HeFei University of Technology"
   employer         :
   pubmed           : 
